integration de la fonctionnalité basique
